--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "autoprefixer": "10.4.20",
     "bcrypt": "^5.1.1",
     "clsx": "^2.1.1",
+    "firebase": "^12.1.0",
+    "firebase-admin": "^13.4.0",
+    "jose": "^6.0.12",
     "next": "15.4.2-canary.46",
     "next-auth": "5.0.0-beta.29",
     "postcss": "8.5.1",
