--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "firebase": "^12.1.0",
     "firebase-admin": "^13.4.0",
     "jose": "^6.0.12",
+    "leaflet": "^1.9.4",
     "next": "15.4.2-canary.46",
     "next-auth": "5.0.0-beta.29",
     "postcss": "8.5.1",
     "postgres": "^3.4.7",
-    "react": "latest",
-    "react-dom": "latest",
+    "react": "19.0.0-rc.1",
+    "react-dom": "19.0.0-rc.1",
+    "react-leaflet": "5.0.0-rc.2",
     "swiper": "^11.2.10",
     "tailwindcss": "3.4.17",
     "typescript": "5.7.3",
@@ -30,6 +32,7 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/leaflet": "^1.9.20",
     "@types/node": "22.10.7",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
